--- a/lab_19.html
+++ b/lab_19.html
@@ -1,99 +1,117 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Git Immersion - Mis à votre disposition par EdgeCase</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen" href="reset.css">
-    <link rel="stylesheet" media="screen" href="screen.css">
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+<html lang="en">
+<head>
+  <title>Lab 19 - Git Immersion - Brought to you by EdgeCase</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" media="screen" href="reset.css">
+  <link rel="stylesheet" media="screen" href="screen.css">
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-1142510-7']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="html5.js"></script>
-    <script type="text/javascript" src="jquery.hotkeys.js"></script>
-    <script type="text/javascript" src="UI.js"></script>
-  </head>
-  <body>
-    <header id="header">
-      <a href="index.html" id="home_link">Git Immersion</a>
-      <a href="http://edgecase.com" target="_blank" id="edgecase_link">Mis à votre disposition par EdgeCase</a>
-      <nav>
-        <ul>
-          <li class="arrow next">
-            <a href="lab_01.html#main_content">Débuter</a>
-          </li>
-          <li class="index_button"><a href="#">Index</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div id="homepage">
-      <div id="border_left">
-        <div id="intro">
-          <p>Git est un système très puissant et très élaboré pour la gestion de version de fichiers. Obtenir une compréhension de ces fonctionnalités ouvre aux développeurs une approche nouvelle et libératrice pour gérer son code source. Le plus sûr moyen de de maîtriser Git est de s'immerger dans ses utilitaires et ses différentes fonctions, pour se faire votre première expérience.</p>
-          <p><em>Git Immersion est un tour guidé qui permet de voir les fondamentaux de Git, inspiré par la promesse que savoir une chose c'est la faire.</em></p>
-        </div>
-        <div id="install">
-          <h1>Installer Git:</h1>
-          <div class="beep">
-            <h2>Mac</h2>
-            <p><a href="http://code.google.com/p/git-osx-installer" target="_blank">Git pour Mac OS X</a></p>
-          </div>
-          <div class="beep">
-            <h2>Windows</h2>
-            <p><a href="http://code.google.com/p/msysgit" target="_blank">msysgit</a></p>
-          </div>
-          <div class="clear"></div>
-          <div id="gui_clients">
-            <h1>Interfaces graphiques:</h1>
-            <div class="beep">
-              <h2>Mac</h2>
-              <p><a href="http://gitx.frim.nl/" target="_blank">GitX</a></p>
-            </div>
-            <div class="beep">
-              <h2>Windows</h2>
-              <p><a href="http://code.google.com/p/tortoisegit/" target="_blank">TortoiseGit</a></p>
-            </div>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <div id="other_resources">
-          <h1>Autres ressources (en anglais)</h1>
-          <p>
-            <ul>
-              <li><a href="http://git-scm.com" target="_blank">http://git-scm.com</a></li>
-              <li><a href="http://github.com" target="_blank">http://github.com</a></li>
-              <li><a href="http://book.git-scm.com" target="_blank">http://book.git-scm.com</a></li>
-              <li><br/><a href="http://pragprog.com/screencasts/v-jwsceasy/source-control-made-easy" target="_blank"><img src="SourceControlMadeEasy.jpg"></a></li>
-            </ul>
-          </p>
-        </div>
-        <div id="license">
-          <h1>LICENSE <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"/></a></h1>
-          <p>
-            GitImmersion est mise à disposition sous une Licence
-            <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative
-              Commons, Attribution-NonCommercial-ShareAlike</a>.
-          </p>
-        </div>
-      </div> <!-- /#border_left -->
-      <div id="brought_to_you_by">
-        <h1>Brought to you by:</h1>
-        <a href="http://edgecase.com" target="_blank">Edgecase</a>
-      </div>
-    </div>
-    <div id="index">
+  <script type="text/javascript">
+   var _gaq = _gaq || [];
+   _gaq.push(['_setAccount', 'UA-1142510-7']);
+   _gaq.push(['_trackPageview']);
+   (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+   })();
+  </script>
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="html5.js"></script>
+  <script type="text/javascript" src="jquery.hotkeys.js"></script>
+  <script type="text/javascript" src="UI.js"></script>
+</head>
+
+<body data-lab-id="19">
+  <div id="pager">
+    <ul>
+  <li class="arrow next">
+          <a href="lab_20.html#main_content">Suivant</a>
+      </li>
+  <li class="arrow previous">
+          <a href="lab_18.html#main_content">Précédent</a>
+      </li>
+  <li class="index_button"><a href="#">Index</a></li>
+</ul>
+
+
+  </div>
+  <header id="header">
+    <a href="index.html" id="home_link">Git Immersion</a>
+    <a href="http://edgecase.com" target="_blank" id="edgecase_link">Brought to you by EdgeCase</a>
+
+    <nav>
+      <ul>
+  <li class="arrow next">
+          <a href="lab_20.html#main_content">Suivant</a>
+      </li>
+  <li class="arrow previous">
+          <a href="lab_18.html#main_content">Précédent</a>
+      </li>
+  <li class="index_button"><a href="#">Index</a></li>
+</ul>
+
+
+    </nav>
+    <div id="bookmark">Bookmark</div>
+  </header>
+
+  <div id="main_content">
+    <h1 class="lab_title"><em>lab 19</em>  Amending Commits</h1>
+<h3>Goals</h3>
+<ul>
+	<li>Learn how to amend an existing commit</li>
+</ul>
+<h2>Change the program then commit <em>01</em></h2>
+<p>Add an author comment to the program.</p>
+<h4>File: <em>hello.rb</em></h4>
+<pre class="file"># Default is World
+# Author: Jim Weirich
+name = ARGV.first || "World"
+
+puts "Hello, #{name}!"
+</pre>
+<h4>Execute:</h4>
+<pre class="instructions">git add hello.rb
+git commit -m "Add an author comment"</pre>
+<h2>Oops, Should have an Email <em>02</em></h2>
+<p>After you make the commit, you realize that any good author comment should have an email included.  Update the hello program to include an email.</p>
+<h4>File: <em>hello.rb</em></h4>
+<pre class="file"># Default is World
+# Author: Jim Weirich (jim@somewhere.com)
+name = ARGV.first || "World"
+
+puts "Hello, #{name}!"
+</pre>
+<h2>Amend the Previous Commit <em>03</em></h2>
+<p>We really don&#8217;t want a separate commit for just the email.  Let&#8217;s amend the previous commit to include the email change.</p>
+<h4>Execute:</h4>
+<pre class="instructions">git add hello.rb
+git commit --amend -m "Add an author/email comment"</pre>
+<h4>Output:</h4>
+<pre class="sample">$ git add hello.rb
+$ git commit --amend -m "Add an author/email comment"
+[master 9a0c29b] Add an author/email comment
+ 1 files changed, 2 insertions(+), 1 deletions(-)
+</pre>
+<h2>Review the History <em>04</em></h2>
+<h4>Execute:</h4>
+<pre class="instructions">git hist</pre>
+<h4>Output:</h4>
+<pre class="sample">$ git hist
+* 9a0c29b 2012-04-22 | Add an author/email comment (HEAD, master) [Jim Weirich]
+* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
+* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+<p>We can see the original &#8220;author&#8221; commit is now gone, and it is replaced by the &#8220;author/email&#8221; commit.  You can achieve the same effect by resetting the branch back one commit and then recommitting the new changes.</p>
+  </div>
+
+  <div id="index">
   <h1>Table des matières</h1>
   <div id="show_bookmarks"></div>
   <div id="no_bookmarks"></div>
@@ -156,6 +174,22 @@
 </div>
 
 
-  </body>
-</html>
 
+  <footer id="footer">
+    <nav>
+      <ul>
+  <li class="arrow next">
+          <a href="lab_20.html#main_content">Suivant</a>
+      </li>
+  <li class="arrow previous">
+          <a href="lab_18.html#main_content">Précédent</a>
+      </li>
+  <li class="index_button"><a href="#">Index</a></li>
+</ul>
+
+
+    </nav>
+    <a href="http://edgecase.com" target="_blank" id="edgecase_link_small">EdgeCase</a>
+  </footer>
+</body>
+</html>
