--- a/lab_32.html
+++ b/lab_32.html
@@ -1,99 +1,128 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Git Immersion - Mis à votre disposition par EdgeCase</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen" href="reset.css">
-    <link rel="stylesheet" media="screen" href="screen.css">
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+<html lang="en">
+<head>
+  <title>Lab 32 - Git Immersion - Brought to you by EdgeCase</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" media="screen" href="reset.css">
+  <link rel="stylesheet" media="screen" href="screen.css">
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-1142510-7']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="html5.js"></script>
-    <script type="text/javascript" src="jquery.hotkeys.js"></script>
-    <script type="text/javascript" src="UI.js"></script>
-  </head>
-  <body>
-    <header id="header">
-      <a href="index.html" id="home_link">Git Immersion</a>
-      <a href="http://edgecase.com" target="_blank" id="edgecase_link">Mis à votre disposition par EdgeCase</a>
-      <nav>
-        <ul>
-          <li class="arrow next">
-            <a href="lab_01.html#main_content">Débuter</a>
-          </li>
-          <li class="index_button"><a href="#">Index</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div id="homepage">
-      <div id="border_left">
-        <div id="intro">
-          <p>Git est un système très puissant et très élaboré pour la gestion de version de fichiers. Obtenir une compréhension de ces fonctionnalités ouvre aux développeurs une approche nouvelle et libératrice pour gérer son code source. Le plus sûr moyen de de maîtriser Git est de s'immerger dans ses utilitaires et ses différentes fonctions, pour se faire votre première expérience.</p>
-          <p><em>Git Immersion est un tour guidé qui permet de voir les fondamentaux de Git, inspiré par la promesse que savoir une chose c'est la faire.</em></p>
-        </div>
-        <div id="install">
-          <h1>Installer Git:</h1>
-          <div class="beep">
-            <h2>Mac</h2>
-            <p><a href="http://code.google.com/p/git-osx-installer" target="_blank">Git pour Mac OS X</a></p>
-          </div>
-          <div class="beep">
-            <h2>Windows</h2>
-            <p><a href="http://code.google.com/p/msysgit" target="_blank">msysgit</a></p>
-          </div>
-          <div class="clear"></div>
-          <div id="gui_clients">
-            <h1>Interfaces graphiques:</h1>
-            <div class="beep">
-              <h2>Mac</h2>
-              <p><a href="http://gitx.frim.nl/" target="_blank">GitX</a></p>
-            </div>
-            <div class="beep">
-              <h2>Windows</h2>
-              <p><a href="http://code.google.com/p/tortoisegit/" target="_blank">TortoiseGit</a></p>
-            </div>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <div id="other_resources">
-          <h1>Autres ressources (en anglais)</h1>
-          <p>
-            <ul>
-              <li><a href="http://git-scm.com" target="_blank">http://git-scm.com</a></li>
-              <li><a href="http://github.com" target="_blank">http://github.com</a></li>
-              <li><a href="http://book.git-scm.com" target="_blank">http://book.git-scm.com</a></li>
-              <li><br/><a href="http://pragprog.com/screencasts/v-jwsceasy/source-control-made-easy" target="_blank"><img src="SourceControlMadeEasy.jpg"></a></li>
-            </ul>
-          </p>
-        </div>
-        <div id="license">
-          <h1>LICENSE <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"/></a></h1>
-          <p>
-            GitImmersion est mise à disposition sous une Licence
-            <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative
-              Commons, Attribution-NonCommercial-ShareAlike</a>.
-          </p>
-        </div>
-      </div> <!-- /#border_left -->
-      <div id="brought_to_you_by">
-        <h1>Brought to you by:</h1>
-        <a href="http://edgecase.com" target="_blank">Edgecase</a>
-      </div>
-    </div>
-    <div id="index">
+  <script type="text/javascript">
+   var _gaq = _gaq || [];
+   _gaq.push(['_setAccount', 'UA-1142510-7']);
+   _gaq.push(['_trackPageview']);
+   (function() {
+     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+   })();
+  </script>
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="html5.js"></script>
+  <script type="text/javascript" src="jquery.hotkeys.js"></script>
+  <script type="text/javascript" src="UI.js"></script>
+</head>
+
+<body data-lab-id="32">
+  <div id="pager">
+    <ul>
+  <li class="arrow next">
+          <a href="lab_33.html#main_content">Suivant</a>
+      </li>
+  <li class="arrow previous">
+          <a href="lab_31.html#main_content">Précédent</a>
+      </li>
+  <li class="index_button"><a href="#">Index</a></li>
+</ul>
+
+
+  </div>
+  <header id="header">
+    <a href="index.html" id="home_link">Git Immersion</a>
+    <a href="http://edgecase.com" target="_blank" id="edgecase_link">Brought to you by EdgeCase</a>
+
+    <nav>
+      <ul>
+  <li class="arrow next">
+          <a href="lab_33.html#main_content">Suivant</a>
+      </li>
+  <li class="arrow previous">
+          <a href="lab_31.html#main_content">Précédent</a>
+      </li>
+  <li class="index_button"><a href="#">Index</a></li>
+</ul>
+
+
+    </nav>
+    <div id="bookmark">Bookmark</div>
+  </header>
+
+  <div id="main_content">
+    <h1 class="lab_title"><em>lab 32</em>  Resetting the Greet Branch</h1>
+<h3>Goals</h3>
+<ul>
+	<li>Reset the greet branch to the point before the first merge.</li>
+</ul>
+<h2>Reset the greet branch <em>01</em></h2>
+<p>Let&#8217;s go back in time on the greet branch to the point <em>before</em> we merged master onto it.  We can <strong>reset</strong> a branch to any commit we want. Essentially this is modifying the branch pointer to point to anywhere in the commit tree.</p>
+<p>In this case we want to back greet up to the point prior to the merge with master.  We need to find the last commit before the merge.</p>
+<h4>Execute:</h4>
+<pre class="instructions">git checkout greet
+git hist</pre>
+<h4>Output:</h4>
+<pre class="sample">$ git checkout greet
+Already on 'greet'
+$ git hist
+*   d186f32 2012-04-22 | Merged master fixed conflict. (HEAD, greet) [Jim Weirich]
+|\  
+| * 788e6c9 2012-04-22 | Made interactive (master) [Jim Weirich]
+* |   ec8a265 2012-04-22 | Merge branch 'master' into greet [Jim Weirich]
+|\ \  
+| |/  
+| * 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
+* | 0abed03 2012-04-22 | Updated Rakefile [Jim Weirich]
+* | 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* | 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
+|/  
+* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
+* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+<p>That&#8217;s a bit hard to read, but looking at the data we see that the &#8220;Updated Rakefile&#8221; commit was the last commit on the greet branch before merging.  Let&#8217;s reset the greet branch to that commit.</p>
+<h4>Execute:</h4>
+<pre class="instructions">git reset --hard &lt;hash&gt;</pre>
+<h4>Output:</h4>
+<pre class="sample">$ git reset --hard 0abed03
+HEAD is now at 0abed03 Updated Rakefile
+</pre>
+<h2>Check the branch. <em>02</em></h2>
+<p>Look at the log for the greet branch.  We no longer have the merge commits in its history.</p>
+<h4>Execute:</h4>
+<pre class="instructions">git hist --all</pre>
+<h4>Output:</h4>
+<pre class="sample">$ git hist --all
+* 788e6c9 2012-04-22 | Made interactive (master) [Jim Weirich]
+* 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
+| * 0abed03 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
+| * 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
+| * 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
+|/  
+* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
+* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+  </div>
+
+  <div id="index">
   <h1>Table des matières</h1>
   <div id="show_bookmarks"></div>
   <div id="no_bookmarks"></div>
@@ -156,6 +185,22 @@
 </div>
 
 
-  </body>
-</html>
 
+  <footer id="footer">
+    <nav>
+      <ul>
+  <li class="arrow next">
+          <a href="lab_33.html#main_content">Suivant</a>
+      </li>
+  <li class="arrow previous">
+          <a href="lab_31.html#main_content">Précédent</a>
+      </li>
+  <li class="index_button"><a href="#">Index</a></li>
+</ul>
+
+
+    </nav>
+    <a href="http://edgecase.com" target="_blank" id="edgecase_link_small">EdgeCase</a>
+  </footer>
+</body>
+</html>
