--- a/lab_29.html
+++ b/lab_29.html
@@ -4,6 +4,7 @@
   <title>Lab 29 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -84,22 +85,22 @@ git commit -m "Made interactive"</pre>
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-*   ec8a265 2012-04-22 | Merge branch 'master' into greet (greet) [Jim Weirich]
+*   57bf0cb 2012-04-22 | Merge branch 'master' into greet (greet) [Jim Weirich]
 |\  
-* | 0abed03 2012-04-22 | Updated Rakefile [Jim Weirich]
-* | 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* | 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
-| | * 788e6c9 2012-04-22 | Made interactive (HEAD, master) [Jim Weirich]
+* | 1eb46b9 2012-04-22 | Updated Rakefile [Jim Weirich]
+* | 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* | 4771919 2012-04-22 | Added greeter class [Jim Weirich]
+| | * c4b98c7 2012-04-22 | Made interactive (HEAD, master) [Jim Weirich]
 | |/  
-| * 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
+| * 89845e3 2012-04-22 | Added README [Jim Weirich]
 |/  
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>Master at commit &#8220;Added <span class="caps">README</span>&#8221; has been merged to the greet branch, but there is now an additional commit on master that has not been merged back to greet.</p>
 <h2>Up Next <em>03</em></h2>
 <p>The latest change in master conflicts with some existing changes in greet.  Next we will resolve those changes.</p>
@@ -187,3 +188,4 @@ git commit -m "Made interactive"</pre>
   </footer>
 </body>
 </html>
+
