--- a/lab_30.html
+++ b/lab_30.html
@@ -4,6 +4,7 @@
   <title>Lab 30 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -117,7 +118,7 @@ git commit -m "Merged master fixed conflict."</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git add lib/hello.rb
 $ git commit -m "Merged master fixed conflict."
-[greet d186f32] Merged master fixed conflict.
+[greet 6624e4e] Merged master fixed conflict.
 </pre>
 <h2>Advanced Merging <em>04</em></h2>
 <p>git doesn&#8217;t provide any graphical merge tools, but it will gladly work with any third party merge tool you wish to use.  See <a href="http://onestepback.org/index.cgi/Tech/Git/UsingP4MergeWithGit.red">http://onestepback.org/index.cgi/Tech/Git/UsingP4MergeWithGit.red</a> for a description of using the Perforce merge tool with git.</p>
@@ -205,3 +206,4 @@ $ git commit -m "Merged master fixed conflict."
   </footer>
 </body>
 </html>
+
