--- a/lab_03.html
+++ b/lab_03.html
@@ -4,6 +4,7 @@
   <title>Lab 3 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -91,7 +92,7 @@ git commit -m "First Commit"</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git add hello.rb
 $ git commit -m "First Commit"
-[master (root-commit) 1c27851] First Commit
+[master (root-commit) fa65841] First Commit
  1 files changed, 1 insertions(+), 0 deletions(-)
  create mode 100644 hello.rb
 </pre>
@@ -179,3 +180,4 @@ $ git commit -m "First Commit"
   </footer>
 </body>
 </html>
+
