--- a/lab_04.html
+++ b/lab_04.html
@@ -4,6 +4,7 @@
   <title>Lab 4 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -162,3 +163,4 @@ nothing to commit (working directory clean)
   </footer>
 </body>
 </html>
+
