--- a/lab_06.html
+++ b/lab_06.html
@@ -4,6 +4,7 @@
   <title>Lab 6 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -168,3 +169,4 @@ $ git status
   </footer>
 </body>
 </html>
+
