--- a/lab_09.html
+++ b/lab_09.html
@@ -4,6 +4,7 @@
   <title>Lab 9 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -117,7 +118,7 @@ git status</pre>
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
 <pre class="sample">$ git commit -m "Added a default value"
-[master cbb7c54] Added a default value
+[master abef5ac] Added a default value
  1 files changed, 3 insertions(+), 1 deletions(-)
 $ git status
 # On branch master
@@ -235,3 +236,4 @@ git status</pre>
   </footer>
 </body>
 </html>
+
