--- a/lab_10.html
+++ b/lab_10.html
@@ -4,6 +4,7 @@
   <title>Lab 10 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -72,27 +73,27 @@
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
 <pre class="sample">$ git log
-commit 495db5564f826d3d214efc7f590a6a7b80fd3831
+commit 641f925c610d578d657754cc0ba0f37bed598f85
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:23:42 2012 +0200
+Date:   Sun Apr 22 23:42:05 2012 +0200
 
     Added a comment
 
-commit cbb7c54472ceab362a299439cdb59f2813d062f1
+commit abef5ac47456902d46cfa8ee8420d94b1a115ccb
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:23:42 2012 +0200
+Date:   Sun Apr 22 23:42:05 2012 +0200
 
     Added a default value
 
-commit 768fe296a647ed17c53ec5e68c04cbf1d6d8bcd4
+commit 295195f3c7594dd4afb59d3bf50b56c957c0f990
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:23:42 2012 +0200
+Date:   Sun Apr 22 23:42:05 2012 +0200
 
     Using ARGV
 
-commit 1c278514f8bcde90affcb195a0b989d629bda86b
+commit fa6584171b414059cef8b2bd2f9fed4bd453bc3a
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:23:42 2012 +0200
+Date:   Sun Apr 22 23:42:05 2012 +0200
 
     First Commit
 </pre>
@@ -104,10 +105,10 @@ Date:   Sun Apr 22 23:23:42 2012 +0200
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
 <pre class="sample">$ git log --pretty=oneline
-495db5564f826d3d214efc7f590a6a7b80fd3831 Added a comment
-cbb7c54472ceab362a299439cdb59f2813d062f1 Added a default value
-768fe296a647ed17c53ec5e68c04cbf1d6d8bcd4 Using ARGV
-1c278514f8bcde90affcb195a0b989d629bda86b First Commit
+641f925c610d578d657754cc0ba0f37bed598f85 Added a comment
+abef5ac47456902d46cfa8ee8420d94b1a115ccb Added a default value
+295195f3c7594dd4afb59d3bf50b56c957c0f990 Using ARGV
+fa6584171b414059cef8b2bd2f9fed4bd453bc3a First Commit
 </pre>
 <h2>Contrôler quelles entrées sont affichées <em>02</em></h2>
 <p>Il y a beaucoup d&#8217;options pour sélectionner quelles entrées sont affichées dans le log. Jouez avec les commandes suivantes:</p>
@@ -127,10 +128,10 @@ git log --pretty=oneline --all</pre>
 <p>Cela ressemble à:</p>
 <h4>Output:</h4>
 <pre class="sample">$ git log --pretty=format:"%h %ad | %s%d [%an]" --graph --date=short
-* 495db55 2012-04-22 | Added a comment (HEAD, master) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 641f925 2012-04-22 | Added a comment (HEAD, master) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>Regardons cette ligne dans le détail:</p>
 <ul>
 	<li><code>--pretty="..."</code> définit le format de sortie.</li>
@@ -229,3 +230,4 @@ git log --pretty=oneline --all</pre>
   </footer>
 </body>
 </html>
+
