--- a/lab_12.html
+++ b/lab_12.html
@@ -4,6 +4,7 @@
   <title>Lab 12 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -74,10 +75,10 @@ de travail.</li>
 <p class="note"><strong>Note:</strong> Vous vous rappelez avoir défini <code>hist</code> dans votre fichier <code>.gitconfig</code>, n&#8217;est ce pas? Si ce n&#8217;est pas le cas, revoyez le tutoriel sur les alias.</p>
 <h4>Output:</h4>
 <pre class="sample">$ git hist
-* 495db55 2012-04-22 | Added a comment (HEAD, master) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 641f925 2012-04-22 | Added a comment (HEAD, master) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>Examiner la sortie du log et trouver le hash pour le premier commit. Cela doit être la dernière ligne de la sortie de <code>git hist</code>. Utiliser le code hash (les 7 premiers caractères sont suffisants) dans la commande ci-dessous. Ensuite, vérifier le contenu du fichier hello.rb.</p>
 <h4>Execute:</h4>
 <pre class="instructions">git checkout &lt;hash&gt;
@@ -86,8 +87,8 @@ cat hello.rb</pre>
 <p class="note"><strong>Note:</strong> De nombreuses commandes dépendent des valeurs de hash dans le dépôt. Comme vos valeurs de hash vont changer des miennes, chaque fois que vous voyez quelque chose comme &lt;hash&gt; ou &lt;treehash&gt; dans la commande, remplacer la valeur par votre propre valeur de dépôt.</p>
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
-<pre class="sample">$ git checkout 1c27851
-Note: checking out '1c27851'.
+<pre class="sample">$ git checkout fa65841
+Note: checking out 'fa65841'.
 
 You are in 'detached HEAD' state. You can look around, make experimental
 changes and commit them, and you can discard any commits you make in this
@@ -98,7 +99,7 @@ do so (now or later) by using -b with the checkout command again. Example:
 
   git checkout -b new_branch_name
 
-HEAD is now at 1c27851... First Commit
+HEAD is now at fa65841... First Commit
 $ cat hello.rb
 puts "Hello, World"
 </pre>
@@ -111,7 +112,7 @@ cat hello.rb</pre>
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
 <pre class="sample">$ git checkout master
-Previous HEAD position was 1c27851... First Commit
+Previous HEAD position was fa65841... First Commit
 Switched to branch 'master'
 $ cat hello.rb
 # Default is "World"
@@ -204,3 +205,4 @@ puts "Hello, #{name}!"
   </footer>
 </body>
 </html>
+
