--- a/lab_17.html
+++ b/lab_17.html
@@ -4,6 +4,7 @@
   <title>Lab 17 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -82,12 +83,12 @@
 <pre class="instructions">git hist</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist
-* 8451c58 2012-04-22 | Revert "Oops, we didn't want this commit" (HEAD, master) [Jim Weirich]
-* 6e54782 2012-04-22 | Oops, we didn't want this commit [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* dc1f8be 2012-04-22 | Revert "Oops, we didn't want this commit" (HEAD, master) [Jim Weirich]
+* 6c126e5 2012-04-22 | Oops, we didn't want this commit [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>We see that we have an &#8220;Oops&#8221; commit and a &#8220;Revert Oops&#8221; commit as the last two commits made in this branch.  Let&#8217;s remove them using reset.</p>
 <h2>First, Mark this Branch <em>03</em></h2>
 <p>But before we remove the commits, let&#8217;s mark the latest commit with a tag so we can find it again.</p>
@@ -100,12 +101,12 @@
 git hist</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git reset --hard v1
-HEAD is now at 495db55 Added a comment
+HEAD is now at 641f925 Added a comment
 $ git hist
-* 495db55 2012-04-22 | Added a comment (HEAD, v1, master) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 641f925 2012-04-22 | Added a comment (HEAD, v1, master) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>Our master branch now points to the v1 commit and the Oops commit and the Revert Oops commit are no longer in the branch.  The <code>--hard</code> parameter indicates that the working directory should be updated to be consistent with the new branch head.</p>
 <h2>Nothing is Ever Lost <em>05</em></h2>
 <p>But what happened to the bad commits?  It turns out that the commits are still in the repository.  In fact, we can still reference them.  Remember that at the beginning of this lab we tagged the reverting commit with the tag &#8220;oops&#8221;.  Let&#8217;s look at <em>all</em> the commits.</p>
@@ -113,12 +114,12 @@ $ git hist
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 8451c58 2012-04-22 | Revert "Oops, we didn't want this commit" (oops) [Jim Weirich]
-* 6e54782 2012-04-22 | Oops, we didn't want this commit [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (HEAD, v1, master) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* dc1f8be 2012-04-22 | Revert "Oops, we didn't want this commit" (oops) [Jim Weirich]
+* 6c126e5 2012-04-22 | Oops, we didn't want this commit [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (HEAD, v1, master) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>Here we see that the bad commits haven&#8217;t disappeared.  They are still in the repository.  It&#8217;s just that they are no longer listed in the master branch.  If we hadn&#8217;t tagged them, they would still be in the repository, but there would be no way to reference them other than using their hash names.  Commits that are unreferenced remain in the repository until the system runs the garbage collection software.</p>
 <h2>Dangers of Reset <em>06</em></h2>
 <p>Resets on local branches are generally safe.  Any &#8220;accidents&#8221; can usually be recovered from by just resetting again with the desired commit.</p>
@@ -207,3 +208,4 @@ $ git hist
   </footer>
 </body>
 </html>
+
