--- a/lab_18.html
+++ b/lab_18.html
@@ -4,6 +4,7 @@
   <title>Lab 18 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -73,12 +74,12 @@
 git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git tag -d oops
-Deleted tag 'oops' (was 8451c58)
+Deleted tag 'oops' (was dc1f8be)
 $ git hist --all
-* 495db55 2012-04-22 | Added a comment (HEAD, v1, master) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 641f925 2012-04-22 | Added a comment (HEAD, v1, master) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>The oops tag is no longer listed in the repository.</p>
   </div>
 
@@ -164,3 +165,4 @@ $ git hist --all
   </footer>
 </body>
 </html>
+
