--- a/lab_20.html
+++ b/lab_20.html
@@ -4,6 +4,7 @@
   <title>Lab 20 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -185,3 +186,4 @@ git rm hello.rb</pre>
   </footer>
 </body>
 </html>
+
