--- a/lab_22.html
+++ b/lab_22.html
@@ -4,6 +4,7 @@
   <title>Lab 22 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -81,8 +82,8 @@ COMMIT_EDITMSG	description  hooks  info   objects  refs
 <pre class="instructions">ls -C .git/objects</pre>
 <h4>Output:</h4>
 <pre class="sample">$ ls -C .git/objects
-09  1c	27  43	59  69	6e  78	97  9c	b5  cb	e4  f5	  pack
-11  24	28  49	5b  6b	76  84	9a  af	c4  e3	e7  info
+09  24	28  35	59  69	6c  93	9c  af	c4  e4	e9  fc	  pack
+11  27	29  43	64  6b	78  97	ab  b5	dc  e7	fa  info
 </pre>
 <p>You should see a bunch of directories with 2 letter names.  The directory names are the first two letters of the sha1 hash of the object stored in git.</p>
 <h2>Deeper into the Object Store <em>03</em></h2>
@@ -124,7 +125,7 @@ $ ls .git/refs/tags
 v1
 v1-beta
 $ cat .git/refs/tags/v1
-495db5564f826d3d214efc7f590a6a7b80fd3831
+641f925c610d578d657754cc0ba0f37bed598f85
 </pre>
 <p>You should recognize the files in the tags subdirectory.  Each file corresponds to a tag you created with the <code>git tag</code> command earlier. Its content is just the hash of the commit tied to the tag.</p>
 <p>The heads directory is similar, but is used for branches rather than tags.  We only have one branch at the moment, so all you will see is master in this directory.</p>
@@ -220,3 +221,4 @@ ref: refs/heads/master
   </footer>
 </body>
 </html>
+
