--- a/lab_23.html
+++ b/lab_23.html
@@ -4,6 +4,7 @@
   <title>Lab 23 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -74,7 +75,7 @@
 <p>This should show the latest commit made in the repository.  The SHA1 hash on your system is probably different that what is on mine, but you should see something like this.</p>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --max-count=1
-* f510805 2012-04-22 | Added a Rakefile. (HEAD, master) [Jim Weirich]</pre>
+* 3555dd7 2012-04-22 | Added a Rakefile. (HEAD, master) [Jim Weirich]</pre>
 <h2>Dumping the Latest Commit <em>02</em></h2>
 <p>Using the SHA1 hash from the commit listed above &#8230;</p>
 <h4>Execute:</h4>
@@ -82,13 +83,13 @@
 git cat-file -p &lt;hash&gt;</pre>
 <p>Here&#8217;s my output &#8230;</p>
 <h4>Output:</h4>
-<pre class="sample">$ git cat-file -t f510805
+<pre class="sample">$ git cat-file -t 3555dd7
 commit
-$ git cat-file -p f510805
+$ git cat-file -p 3555dd7
 tree 096b74c56bfc6b40e754fc0725b8c70b2038b91e
-parent e3344e8dbb76333e82d886733e2bd75f91a9fcd3
-author Jim Weirich &lt;jim (at) edgecase.com&gt; 1335129822 +0200
-committer Jim Weirich &lt;jim (at) edgecase.com&gt; 1335129822 +0200
+parent e99f536ad65b362f11038ea6d97841e0a42aa337
+author Jim Weirich &lt;jim (at) edgecase.com&gt; 1335130925 +0200
+committer Jim Weirich &lt;jim (at) edgecase.com&gt; 1335130925 +0200
 
 Added a Rakefile.
 </pre>
@@ -211,3 +212,4 @@ puts "Hello, #{name}!"
   </footer>
 </body>
 </html>
+
