--- a/lab_25.html
+++ b/lab_25.html
@@ -4,6 +4,7 @@
   <title>Lab 25 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -71,16 +72,16 @@
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 0abed03 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
-* 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
-* f510805 2012-04-22 | Added a Rakefile. (master) [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 1eb46b9 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
+* 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* 4771919 2012-04-22 | Added greeter class [Jim Weirich]
+* 3555dd7 2012-04-22 | Added a Rakefile. (master) [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <h2>Switch to the Master Branch <em>01</em></h2>
 <p>Just use the <code>git checkout</code> command to switch between branches.</p>
 <h4>Execute:</h4>
@@ -198,3 +199,4 @@ puts greeter.greet
   </footer>
 </body>
 </html>
+
