--- a/lab_27.html
+++ b/lab_27.html
@@ -4,6 +4,7 @@
   <title>Lab 27 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -72,18 +73,18 @@
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 3c1c0aa 2012-04-22 | Added README (HEAD, master) [Jim Weirich]
-| * 0abed03 2012-04-22 | Updated Rakefile (greet) [Jim Weirich]
-| * 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
-| * 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
+* 1eb46b9 2012-04-22 | Updated Rakefile (greet) [Jim Weirich]
+* 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* 4771919 2012-04-22 | Added greeter class [Jim Weirich]
+| * 89845e3 2012-04-22 | Added README (HEAD, master) [Jim Weirich]
 |/  
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>Here is our first chance to see the <code>--graph</code> option on <code>git hist</code> in action. Adding the <code>--graph</code> option to <code>git log</code> causes it to draw the commit tree using simple <span class="caps">ASCII</span> characters.  We can see both branches (greet and master), and that the master branch is the current <span class="caps">HEAD</span>. The common ancestor to both branches is the &#8220;Added a Rakefile&#8221; branch.</p>
 <p>The <code>--all</code> flag makes sure that we see all the branches.  The default is to show only the current branch.</p>
   </div>
@@ -170,3 +171,4 @@
   </footer>
 </body>
 </html>
+
