--- a/lab_32.html
+++ b/lab_32.html
@@ -4,6 +4,7 @@
   <title>Lab 32 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -76,30 +77,30 @@ git hist</pre>
 <pre class="sample">$ git checkout greet
 Already on 'greet'
 $ git hist
-*   d186f32 2012-04-22 | Merged master fixed conflict. (HEAD, greet) [Jim Weirich]
+*   6624e4e 2012-04-22 | Merged master fixed conflict. (HEAD, greet) [Jim Weirich]
 |\  
-| * 788e6c9 2012-04-22 | Made interactive (master) [Jim Weirich]
-* |   ec8a265 2012-04-22 | Merge branch 'master' into greet [Jim Weirich]
+| * c4b98c7 2012-04-22 | Made interactive (master) [Jim Weirich]
+* |   57bf0cb 2012-04-22 | Merge branch 'master' into greet [Jim Weirich]
 |\ \  
 | |/  
-| * 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
-* | 0abed03 2012-04-22 | Updated Rakefile [Jim Weirich]
-* | 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* | 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
+| * 89845e3 2012-04-22 | Added README [Jim Weirich]
+* | 1eb46b9 2012-04-22 | Updated Rakefile [Jim Weirich]
+* | 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* | 4771919 2012-04-22 | Added greeter class [Jim Weirich]
 |/  
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>That&#8217;s a bit hard to read, but looking at the data we see that the &#8220;Updated Rakefile&#8221; commit was the last commit on the greet branch before merging.  Let&#8217;s reset the greet branch to that commit.</p>
 <h4>Execute:</h4>
 <pre class="instructions">git reset --hard &lt;hash&gt;</pre>
 <h4>Output:</h4>
-<pre class="sample">$ git reset --hard 0abed03
-HEAD is now at 0abed03 Updated Rakefile
+<pre class="sample">$ git reset --hard 1eb46b9
+HEAD is now at 1eb46b9 Updated Rakefile
 </pre>
 <h2>Check the branch. <em>02</em></h2>
 <p>Look at the log for the greet branch.  We no longer have the merge commits in its history.</p>
@@ -107,19 +108,19 @@ HEAD is now at 0abed03 Updated Rakefile
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 788e6c9 2012-04-22 | Made interactive (master) [Jim Weirich]
-* 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
-| * 0abed03 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
-| * 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
-| * 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
+* 1eb46b9 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
+* 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* 4771919 2012-04-22 | Added greeter class [Jim Weirich]
+| * c4b98c7 2012-04-22 | Made interactive (master) [Jim Weirich]
+| * 89845e3 2012-04-22 | Added README [Jim Weirich]
 |/  
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
   </div>
 
   <div id="index">
@@ -204,3 +205,4 @@ HEAD is now at 0abed03 Updated Rakefile
   </footer>
 </body>
 </html>
+
