--- a/lab_33.html
+++ b/lab_33.html
@@ -4,6 +4,7 @@
   <title>Lab 33 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -73,15 +74,15 @@
 git hist</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist
-* 788e6c9 2012-04-22 | Made interactive (HEAD, master) [Jim Weirich]
-* 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* c4b98c7 2012-04-22 | Made interactive (HEAD, master) [Jim Weirich]
+* 89845e3 2012-04-22 | Added README [Jim Weirich]
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>The &#8216;Added <span class="caps">README</span>&#8217; commit is the one directly before the conflicting interactive mode.  We will reset the master branch to &#8216;Added <span class="caps">README</span>&#8217; branch.</p>
 <h4>Execute:</h4>
 <pre class="instructions">git reset --hard &lt;hash&gt;
@@ -89,18 +90,18 @@ git hist --all</pre>
 <p>Review the log.  It should look like the repository has been wound back in time to the point before we merged anything.</p>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 3c1c0aa 2012-04-22 | Added README (HEAD, master) [Jim Weirich]
-| * 0abed03 2012-04-22 | Updated Rakefile (greet) [Jim Weirich]
-| * 449ef93 2012-04-22 | Hello uses Greeter [Jim Weirich]
-| * 22248aa 2012-04-22 | Added greeter class [Jim Weirich]
+* 1eb46b9 2012-04-22 | Updated Rakefile (greet) [Jim Weirich]
+* 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* 4771919 2012-04-22 | Added greeter class [Jim Weirich]
+| * 89845e3 2012-04-22 | Added README (HEAD, master) [Jim Weirich]
 |/  
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
   </div>
 
   <div id="index">
@@ -185,3 +186,4 @@ git hist --all</pre>
   </footer>
 </body>
 </html>
+
