--- a/lab_34.html
+++ b/lab_34.html
@@ -4,6 +4,7 @@
   <title>Lab 34 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -83,17 +84,17 @@ Applying: hello uses Greeter
 Applying: updated Rakefile
 $
 $ git hist
-* 6603a5f 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
-* 96addd7 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* f11ead9 2012-04-22 | Added greeter class [Jim Weirich]
-* 3c1c0aa 2012-04-22 | Added README (master) [Jim Weirich]
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 0775542 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
+* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
+* 89845e3 2012-04-22 | Added README (master) [Jim Weirich]
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <h2>Merge VS Rebase <em>01</em></h2>
 <p>The final result of the rebase is very similar to the merge.  The greet branch now contains all of its changes, as well as all the changes from the master branch.  However, the commit tree is quite different.  The commit tree for the greet branch has been rewritten so that the master branch is a part of the commit history.  This leaves the chain of commits linear and much easier to read.</p>
 <h2>When to Rebase, When to Merge? <em>02</em></h2>
@@ -187,3 +188,4 @@ $ git hist
   </footer>
 </body>
 </html>
+
