--- a/lab_38.html
+++ b/lab_38.html
@@ -4,6 +4,7 @@
   <title>Lab 38 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -84,17 +85,17 @@ README
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 6603a5f 2012-04-22 | Updated Rakefile (HEAD, origin/master, origin/greet, origin/HEAD, master) [Jim Weirich]
-* 96addd7 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* f11ead9 2012-04-22 | Added greeter class [Jim Weirich]
-* 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 0775542 2012-04-22 | Updated Rakefile (HEAD, origin/master, origin/greet, origin/HEAD, master) [Jim Weirich]
+* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
+* 89845e3 2012-04-22 | Added README [Jim Weirich]
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>You should now see a list of the all the commits in the new repository, and it should (more or less) match the history of commits in the original repository.  The only difference should be in the names of the branches.</p>
 <h2>Remote branches <em>03</em></h2>
 <p>You should see a <strong>master</strong> branch (along with <strong><span class="caps">HEAD</span></strong>) in the history list.  But you will also have number of strangely named branches (<strong>origin/master</strong>, <strong>origin/greet</strong> and <strong>origin/<span class="caps">HEAD</span></strong>).  We&#8217;ll talk about them in a bit.</p>
@@ -182,3 +183,4 @@ README
   </footer>
 </body>
 </html>
+
