--- a/lab_39.html
+++ b/lab_39.html
@@ -4,6 +4,7 @@
   <title>Lab 39 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -176,3 +177,4 @@ origin
   </footer>
 </body>
 </html>
+
