--- a/lab_42.html
+++ b/lab_42.html
@@ -4,6 +4,7 @@
   <title>Lab 42 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -74,20 +75,20 @@ git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git fetch
 From /home/thomas/git/git2/git_immersion/auto/hello
-   6603a5f..47104fe  master     -&gt; origin/master
+   0775542..535c353  master     -&gt; origin/master
 $ git hist --all
-* 47104fe 2012-04-22 | Changed README in original repo (origin/master, origin/HEAD) [Jim Weirich]
-* 6603a5f 2012-04-22 | Updated Rakefile (HEAD, origin/greet, master) [Jim Weirich]
-* 96addd7 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* f11ead9 2012-04-22 | Added greeter class [Jim Weirich]
-* 3c1c0aa 2012-04-22 | Added README [Jim Weirich]
-* f510805 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e3344e8 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* 9a0c29b 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 495db55 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* cbb7c54 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 768fe29 2012-04-22 | Using ARGV [Jim Weirich]
-* 1c27851 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 535c353 2012-04-22 | Changed README in original repo (origin/master, origin/HEAD) [Jim Weirich]
+* 0775542 2012-04-22 | Updated Rakefile (HEAD, origin/greet, master) [Jim Weirich]
+* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
+* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
+* 89845e3 2012-04-22 | Added README [Jim Weirich]
+* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
+* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
+* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
+* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
+* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
+* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
+* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
 <p>At this point the repository has all the commits from the original repository, but they are not integrated into the the cloned repository&#8217;s local branches.</p>
 <p>Find the &#8220;Changed <span class="caps">README</span> in original repo&#8221; commit in the history above.  Notice that the commit includes &#8220;origin/master&#8221; and &#8220;origin/<span class="caps">HEAD</span>&#8221;.</p>
 <p>Now look at the &#8220;Updated Rakefile&#8221; commit.  You will see that it the local master branch points to this commit, not to the new commit that we just fetched.</p>
@@ -185,3 +186,4 @@ This is the Hello World example from the git tutorial.
   </footer>
 </body>
 </html>
+
