--- a/lab_43.html
+++ b/lab_43.html
@@ -4,6 +4,7 @@
   <title>Lab 43 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -71,7 +72,7 @@
 <pre class="instructions">git merge origin/master</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git merge origin/master
-Updating 6603a5f..47104fe
+Updating 0775542..535c353
 Fast-forward
  README |    1 +
  1 files changed, 1 insertions(+), 0 deletions(-)
@@ -172,3 +173,4 @@ This is the Hello World example from the git tutorial.
   </footer>
 </body>
 </html>
+
