--- a/lab_44.html
+++ b/lab_44.html
@@ -4,6 +4,7 @@
   <title>Lab 44 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -156,3 +157,4 @@ git merge origin/master</pre>
   </footer>
 </body>
 </html>
+
