--- a/lab_45.html
+++ b/lab_45.html
@@ -4,6 +4,7 @@
   <title>Lab 45 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -82,8 +83,8 @@ $ git branch -a
   remotes/origin/greet
   remotes/origin/master
 $ git hist --max-count=2
-* 47104fe 2012-04-22 | Changed README in original repo (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
-* 6603a5f 2012-04-22 | Updated Rakefile (origin/greet, greet) [Jim Weirich]</pre>
+* 535c353 2012-04-22 | Changed README in original repo (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
+* 0775542 2012-04-22 | Updated Rakefile (origin/greet, greet) [Jim Weirich]</pre>
 <p>We can now see the greet branch in the branch list and in the log.</p>
   </div>
 
@@ -169,3 +170,4 @@ $ git hist --max-count=2
   </footer>
 </body>
 </html>
+
