--- a/lab_48.html
+++ b/lab_48.html
@@ -4,6 +4,7 @@
   <title>Lab 48 - Git Immersion - Brought to you by EdgeCase</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <link rel="stylesheet" media="screen" href="reset.css">
   <link rel="stylesheet" media="screen" href="screen.css">
   <!--[if lt IE 9]>
@@ -83,7 +84,7 @@ git commit -m "Added shared comment to readme"</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git push shared master
 To ../hello.git
-   47104fe..6c98444  master -&gt; master
+   535c353..dcd6ad8  master -&gt; master
 </pre>
 <p class="note"><strong><span class="caps">NOTE</span>:</strong> We had to explicitly name the branch master that was receiving the push.  It is possible to set it up automatically, but I <em>never</em> remember the commands to do that.  Check out the &#8220;Git Remote Branch&#8221; gem for easy management of remote branches.</p>
   </div>
@@ -170,3 +171,4 @@ To ../hello.git
   </footer>
 </body>
 </html>
+
