Update published repos

--- a/lab_03.html
+++ b/lab_03.html
@@ -92,7 +92,7 @@ git commit -m "First Commit"</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git add hello.rb
 $ git commit -m "First Commit"
-[master (root-commit) fa65841] First Commit
+[master (root-commit) 49a284b] First Commit
  1 files changed, 1 insertions(+), 0 deletions(-)
  create mode 100644 hello.rb
 </pre>
@@ -152,7 +152,7 @@ $ git commit -m "First Commit"
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
