--- a/lab_35.html
+++ b/lab_35.html
@@ -76,7 +76,7 @@ git merge greet</pre>
 Switched to branch 'master'
 $
 $ git merge greet
-Updating 89845e3..0775542
+Updating e7f49d0..f30c158
 Fast-forward
  Rakefile       |    2 +-
  lib/greeter.rb |    8 ++++++++
@@ -91,17 +91,17 @@ Fast-forward
 <pre class="instructions">git hist</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist
-* 0775542 2012-04-22 | Updated Rakefile (HEAD, master, greet) [Jim Weirich]
-* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
-* 89845e3 2012-04-22 | Added README [Jim Weirich]
-* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* f30c158 2012-04-28 | Updated Rakefile (HEAD, master, greet) [Jim Weirich]
+* f198b1f 2012-04-28 | Hello uses Greeter [Jim Weirich]
+* cc84df4 2012-04-28 | Added greeter class [Jim Weirich]
+* e7f49d0 2012-04-28 | Added README [Jim Weirich]
+* cb1bb8e 2012-04-28 | Added a Rakefile. [Jim Weirich]
+* f1d027c 2012-04-28 | Moved hello.rb to lib [Jim Weirich]
+* d87139a 2012-04-28 | Add an author/email comment [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>The greet and master branches are now identical.</p>
   </div>
 
@@ -159,7 +159,7 @@ Fast-forward
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
