--- a/lab_42.html
+++ b/lab_42.html
@@ -75,20 +75,20 @@ git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git fetch
 From /home/thomas/git/git2/git_immersion/auto/hello
-   0775542..535c353  master     -&gt; origin/master
+   f30c158..e2fa36d  master     -&gt; origin/master
 $ git hist --all
-* 535c353 2012-04-22 | Changed README in original repo (origin/master, origin/HEAD) [Jim Weirich]
-* 0775542 2012-04-22 | Updated Rakefile (HEAD, origin/greet, master) [Jim Weirich]
-* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
-* 89845e3 2012-04-22 | Added README [Jim Weirich]
-* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* e2fa36d 2012-04-28 | Changed README in original repo (origin/master, origin/HEAD) [Jim Weirich]
+* f30c158 2012-04-28 | Updated Rakefile (HEAD, origin/greet, master) [Jim Weirich]
+* f198b1f 2012-04-28 | Hello uses Greeter [Jim Weirich]
+* cc84df4 2012-04-28 | Added greeter class [Jim Weirich]
+* e7f49d0 2012-04-28 | Added README [Jim Weirich]
+* cb1bb8e 2012-04-28 | Added a Rakefile. [Jim Weirich]
+* f1d027c 2012-04-28 | Moved hello.rb to lib [Jim Weirich]
+* d87139a 2012-04-28 | Add an author/email comment [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>At this point the repository has all the commits from the original repository, but they are not integrated into the the cloned repository&#8217;s local branches.</p>
 <p>Find the &#8220;Changed <span class="caps">README</span> in original repo&#8221; commit in the history above.  Notice that the commit includes &#8220;origin/master&#8221; and &#8220;origin/<span class="caps">HEAD</span>&#8221;.</p>
 <p>Now look at the &#8220;Updated Rakefile&#8221; commit.  You will see that it the local master branch points to this commit, not to the new commit that we just fetched.</p>
@@ -158,7 +158,7 @@ This is the Hello World example from the git tutorial.
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
