--- a/lab_45.html
+++ b/lab_45.html
@@ -83,8 +83,8 @@ $ git branch -a
   remotes/origin/greet
   remotes/origin/master
 $ git hist --max-count=2
-* 535c353 2012-04-22 | Changed README in original repo (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
-* 0775542 2012-04-22 | Updated Rakefile (origin/greet, greet) [Jim Weirich]</pre>
+* e2fa36d 2012-04-28 | Changed README in original repo (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
+* f30c158 2012-04-28 | Updated Rakefile (origin/greet, greet) [Jim Weirich]</pre>
 <p>We can now see the greet branch in the branch list and in the log.</p>
   </div>
 
@@ -142,7 +142,7 @@ $ git hist --max-count=2
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
