--- a/lab_49.html
+++ b/lab_49.html
@@ -62,16 +62,16 @@
   </header>
 
   <div id="main_content">
-    <h1 class="lab_title"><em>lab 49</em>  Pulling Shared Changes</h1>
-<h3>Goals</h3>
+    <h1 class="lab_title"><em>lab 49</em>  Récupérer les changements partagés</h1>
+<h3>Buts</h3>
 <ul>
-	<li>Learn how to pull changes from a shared repository.</li>
+	<li>Apprendre comment récupérer les changements depuis un dépôt partagé.</li>
 </ul>
-<p>Quick hop over to the clone repository and let&#8217;s pull down the changes just pushed to the shared repo.</p>
+<p>Aller rapidement dans le clône du dépôt et maintenant récupérons rapidement les changements qu&#8217;on vient juste d&#8217;effectuer sur le dépôt partagé.</p>
 <h4>Execute:</h4>
 <pre class="instructions">cd ../cloned_hello</pre>
-<p style="color:red;"><strong><span class="caps">NOTE</span>: Now in the <em>cloned_hello</em> repo.</strong></p>
-<p>Continue with&#8230;</p>
+<p style="color:red;"><strong><span class="caps">NOTE</span>: Maintenant dans le dépôt <em>cloned_hello</em>.</strong></p>
+<p>Continuer avec &#8230;</p>
 <h4>Execute:</h4>
 <pre class="instructions">git remote add shared ../hello.git
 git branch --track shared master
@@ -133,7 +133,7 @@ cat README</pre>
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
