--- a/lab_10.html
+++ b/lab_10.html
@@ -73,27 +73,27 @@
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
 <pre class="sample">$ git log
-commit 641f925c610d578d657754cc0ba0f37bed598f85
+commit 3d2a00b648f4eeb35f5cc14a5780eadfff2cd35a
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:42:05 2012 +0200
+Date:   Sat Apr 28 22:16:18 2012 +0200
 
     Added a comment
 
-commit abef5ac47456902d46cfa8ee8420d94b1a115ccb
+commit 09cad4e5c464a60af72a13bb9436474457a30379
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:42:05 2012 +0200
+Date:   Sat Apr 28 22:16:18 2012 +0200
 
     Added a default value
 
-commit 295195f3c7594dd4afb59d3bf50b56c957c0f990
+commit 1e86dea349a7cfb0193090c832a27addc5957f01
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:42:05 2012 +0200
+Date:   Sat Apr 28 22:16:18 2012 +0200
 
     Using ARGV
 
-commit fa6584171b414059cef8b2bd2f9fed4bd453bc3a
+commit 49a284b5d21f32bf70d4dd9c65a1c6d25061347f
 Author: Jim Weirich &lt;jim (at) edgecase.com&gt;
-Date:   Sun Apr 22 23:42:05 2012 +0200
+Date:   Sat Apr 28 22:16:18 2012 +0200
 
     First Commit
 </pre>
@@ -105,10 +105,10 @@ Date:   Sun Apr 22 23:42:05 2012 +0200
 <p>Vous devriez voir &#8230;</p>
 <h4>Output:</h4>
 <pre class="sample">$ git log --pretty=oneline
-641f925c610d578d657754cc0ba0f37bed598f85 Added a comment
-abef5ac47456902d46cfa8ee8420d94b1a115ccb Added a default value
-295195f3c7594dd4afb59d3bf50b56c957c0f990 Using ARGV
-fa6584171b414059cef8b2bd2f9fed4bd453bc3a First Commit
+3d2a00b648f4eeb35f5cc14a5780eadfff2cd35a Added a comment
+09cad4e5c464a60af72a13bb9436474457a30379 Added a default value
+1e86dea349a7cfb0193090c832a27addc5957f01 Using ARGV
+49a284b5d21f32bf70d4dd9c65a1c6d25061347f First Commit
 </pre>
 <h2>Contrôler quelles entrées sont affichées <em>02</em></h2>
 <p>Il y a beaucoup d&#8217;options pour sélectionner quelles entrées sont affichées dans le log. Jouez avec les commandes suivantes:</p>
@@ -128,10 +128,10 @@ git log --pretty=oneline --all</pre>
 <p>Cela ressemble à:</p>
 <h4>Output:</h4>
 <pre class="sample">$ git log --pretty=format:"%h %ad | %s%d [%an]" --graph --date=short
-* 641f925 2012-04-22 | Added a comment (HEAD, master) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 3d2a00b 2012-04-28 | Added a comment (HEAD, master) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>Regardons cette ligne dans le détail:</p>
 <ul>
 	<li><code>--pretty="..."</code> définit le format de sortie.</li>
@@ -202,7 +202,7 @@ git log --pretty=oneline --all</pre>
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
