--- a/lab_16.html
+++ b/lab_16.html
@@ -90,7 +90,7 @@ git commit -m "Oops, we didn't want this commit"</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git revert HEAD --no-edit
 Finished one revert.
-[master dc1f8be] Revert "Oops, we didn't want this commit"
+[master 79adc4c] Revert "Oops, we didn't want this commit"
  1 files changed, 1 insertions(+), 1 deletions(-)
 </pre>
 <p>Comme nous étions en train d&#8217;annuler le dernier commit que nous avions fait, nous avons été capable d&#8217;utiliser <code>HEAD</code> comme argument pour annuler. Nous pouvons annuler n&#8217;importe quel commit de manière arbitraire plus ancien dans l&#8217;historique en spécifiant simplement la valeur de son hash.</p>
@@ -101,12 +101,12 @@ Finished one revert.
 <pre class="instructions">git hist</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist
-* dc1f8be 2012-04-22 | Revert "Oops, we didn't want this commit" (HEAD, master) [Jim Weirich]
-* 6c126e5 2012-04-22 | Oops, we didn't want this commit [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* 79adc4c 2012-04-28 | Revert "Oops, we didn't want this commit" (HEAD, master) [Jim Weirich]
+* e85dca2 2012-04-28 | Oops, we didn't want this commit [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>Cette technique fonctionnera avec n&#8217;importe quel commit (même si vous allez peut être devoir résoudre des conflits). C&#8217;est sûr pour être utilisé même sur les branches qui sont partagées sur des dépôts distants.</p>
 <h2>Quoi de plus <em>05</em></h2>
 <p>Maintenant, allons regarder une technique qui peut être utilisée pour enlever les commits les plus récents de l&#8217;historique du dépôt.</p>
@@ -166,7 +166,7 @@ Finished one revert.
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
