--- a/lab_19.html
+++ b/lab_19.html
@@ -96,7 +96,7 @@ git commit --amend -m "Add an author/email comment"</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git add hello.rb
 $ git commit --amend -m "Add an author/email comment"
-[master fc0e921] Add an author/email comment
+[master d87139a] Add an author/email comment
  1 files changed, 2 insertions(+), 1 deletions(-)
 </pre>
 <h2>Review the History <em>04</em></h2>
@@ -104,11 +104,11 @@ $ git commit --amend -m "Add an author/email comment"
 <pre class="instructions">git hist</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist
-* fc0e921 2012-04-22 | Add an author/email comment (HEAD, master) [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* d87139a 2012-04-28 | Add an author/email comment (HEAD, master) [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>We can see the original &#8220;author&#8221; commit is now gone, and it is replaced by the &#8220;author/email&#8221; commit.  You can achieve the same effect by resetting the branch back one commit and then recommitting the new changes.</p>
   </div>
 
@@ -166,7 +166,7 @@ $ git commit --amend -m "Add an author/email comment"
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
