--- a/lab_29.html
+++ b/lab_29.html
@@ -85,22 +85,22 @@ git commit -m "Made interactive"</pre>
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-*   57bf0cb 2012-04-22 | Merge branch 'master' into greet (greet) [Jim Weirich]
+*   f5a0ad3 2012-04-28 | Merge branch 'master' into greet (greet) [Jim Weirich]
 |\  
-* | 1eb46b9 2012-04-22 | Updated Rakefile [Jim Weirich]
-* | 3f30841 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* | 4771919 2012-04-22 | Added greeter class [Jim Weirich]
-| | * c4b98c7 2012-04-22 | Made interactive (HEAD, master) [Jim Weirich]
+* | f3b8b8c 2012-04-28 | Updated Rakefile [Jim Weirich]
+* | f432c54 2012-04-28 | Hello uses Greeter [Jim Weirich]
+* | b8aeb50 2012-04-28 | Added greeter class [Jim Weirich]
+| | * 99f16b2 2012-04-28 | Made interactive (HEAD, master) [Jim Weirich]
 | |/  
-| * 89845e3 2012-04-22 | Added README [Jim Weirich]
+| * e7f49d0 2012-04-28 | Added README [Jim Weirich]
 |/  
-* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* cb1bb8e 2012-04-28 | Added a Rakefile. [Jim Weirich]
+* f1d027c 2012-04-28 | Moved hello.rb to lib [Jim Weirich]
+* d87139a 2012-04-28 | Add an author/email comment [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>Master at commit &#8220;Added <span class="caps">README</span>&#8221; has been merged to the greet branch, but there is now an additional commit on master that has not been merged back to greet.</p>
 <h2>Up Next <em>03</em></h2>
 <p>The latest change in master conflicts with some existing changes in greet.  Next we will resolve those changes.</p>
@@ -160,7 +160,7 @@ git commit -m "Made interactive"</pre>
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
