--- a/lab_34.html
+++ b/lab_34.html
@@ -84,17 +84,17 @@ Applying: hello uses Greeter
 Applying: updated Rakefile
 $
 $ git hist
-* 0775542 2012-04-22 | Updated Rakefile (HEAD, greet) [Jim Weirich]
-* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
-* 89845e3 2012-04-22 | Added README (master) [Jim Weirich]
-* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* f30c158 2012-04-28 | Updated Rakefile (HEAD, greet) [Jim Weirich]
+* f198b1f 2012-04-28 | Hello uses Greeter [Jim Weirich]
+* cc84df4 2012-04-28 | Added greeter class [Jim Weirich]
+* e7f49d0 2012-04-28 | Added README (master) [Jim Weirich]
+* cb1bb8e 2012-04-28 | Added a Rakefile. [Jim Weirich]
+* f1d027c 2012-04-28 | Moved hello.rb to lib [Jim Weirich]
+* d87139a 2012-04-28 | Add an author/email comment [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <h2>Merge VS Rebase <em>01</em></h2>
 <p>The final result of the rebase is very similar to the merge.  The greet branch now contains all of its changes, as well as all the changes from the master branch.  However, the commit tree is quite different.  The commit tree for the greet branch has been rewritten so that the master branch is a part of the commit history.  This leaves the chain of commits linear and much easier to read.</p>
 <h2>When to Rebase, When to Merge? <em>02</em></h2>
@@ -160,7 +160,7 @@ $ git hist
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
