--- a/lab_38.html
+++ b/lab_38.html
@@ -85,17 +85,17 @@ README
 <pre class="instructions">git hist --all</pre>
 <h4>Output:</h4>
 <pre class="sample">$ git hist --all
-* 0775542 2012-04-22 | Updated Rakefile (HEAD, origin/master, origin/greet, origin/HEAD, master) [Jim Weirich]
-* 3825517 2012-04-22 | Hello uses Greeter [Jim Weirich]
-* ea668ab 2012-04-22 | Added greeter class [Jim Weirich]
-* 89845e3 2012-04-22 | Added README [Jim Weirich]
-* 3555dd7 2012-04-22 | Added a Rakefile. [Jim Weirich]
-* e99f536 2012-04-22 | Moved hello.rb to lib [Jim Weirich]
-* fc0e921 2012-04-22 | Add an author/email comment [Jim Weirich]
-* 641f925 2012-04-22 | Added a comment (v1) [Jim Weirich]
-* abef5ac 2012-04-22 | Added a default value (v1-beta) [Jim Weirich]
-* 295195f 2012-04-22 | Using ARGV [Jim Weirich]
-* fa65841 2012-04-22 | First Commit [Jim Weirich]</pre>
+* f30c158 2012-04-28 | Updated Rakefile (HEAD, origin/master, origin/greet, origin/HEAD, master) [Jim Weirich]
+* f198b1f 2012-04-28 | Hello uses Greeter [Jim Weirich]
+* cc84df4 2012-04-28 | Added greeter class [Jim Weirich]
+* e7f49d0 2012-04-28 | Added README [Jim Weirich]
+* cb1bb8e 2012-04-28 | Added a Rakefile. [Jim Weirich]
+* f1d027c 2012-04-28 | Moved hello.rb to lib [Jim Weirich]
+* d87139a 2012-04-28 | Add an author/email comment [Jim Weirich]
+* 3d2a00b 2012-04-28 | Added a comment (v1) [Jim Weirich]
+* 09cad4e 2012-04-28 | Added a default value (v1-beta) [Jim Weirich]
+* 1e86dea 2012-04-28 | Using ARGV [Jim Weirich]
+* 49a284b 2012-04-28 | First Commit [Jim Weirich]</pre>
 <p>You should now see a list of the all the commits in the new repository, and it should (more or less) match the history of commits in the original repository.  The only difference should be in the names of the branches.</p>
 <h2>Remote branches <em>03</em></h2>
 <p>You should see a <strong>master</strong> branch (along with <strong><span class="caps">HEAD</span></strong>) in the history list.  But you will also have number of strangely named branches (<strong>origin/master</strong>, <strong>origin/greet</strong> and <strong>origin/<span class="caps">HEAD</span></strong>).  We&#8217;ll talk about them in a bit.</p>
@@ -155,7 +155,7 @@ README
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
