--- a/lab_53.html
+++ b/lab_53.html
@@ -63,7 +63,7 @@
 
   <div id="main_content">
     <h1 class="lab_title"><em>lab 53</em>  Merci</h1>
-<p>Merci d&#8217;avoir essayer le tutoriel Git Immersion. Libre à vous de prendre contact avec l&#8217;auteur original (anglophone) à l&#8217;adresse jim.weirich@gmail.com ou pour des remarques sur la traduction à thomas_gratier@yahoo.fr comments to</p>
+<p>Merci d&#8217;avoir essayé le tutoriel Git Immersion. Libre à vous de prendre contact avec l&#8217;auteur original (anglophone) à l&#8217;adresse jim.weirich@gmail.com ou pour des remarques sur la traduction à thomas_gratier@yahoo.fr</p>
   </div>
 
   <div id="index">
@@ -120,7 +120,7 @@
           <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
           <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
           <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Pulling Shared Changes</a></li>
+          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
           <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
           <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
           <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
